Fixed voting area created in bottom of page for better UX - ensures user know what todo even on small screens

--- a/src/app/components/Selection/Selection.css
+++ b/src/app/components/Selection/Selection.css
@@ -1,5 +1,5 @@
 .root {
-    margin-bottom: 5vh;
+    margin-bottom: 13em;
 }
 
 .left {
