--- a/src/app/components/Voting/Vote.css
+++ b/src/app/components/Voting/Vote.css
@@ -1,6 +1,17 @@
 .root {
+    position: fixed;
+    bottom: 0;
+    background: rgba(161, 78, 2, 0.9);
+    padding: 1em 0;
+    left: 0;
+    width: 100%;
+}
+
+.wrapper {
     display: flex;
     flex-direction: column;
+    max-width: 45em;
+    margin: 0 auto;
 }
 
 .left, .right {
@@ -21,7 +32,7 @@
 }
 
 @media all  and (min-width: 31em) {
-    .root {
+    .wrapper {
         flex-direction: row;
     }
 
